--- a/src/entities/word/ui/WordInput.module.css
+++ b/src/entities/word/ui/WordInput.module.css
@@ -4,6 +4,8 @@
 }
 
 .character {
+  width: 3em;
+  aspect-ratio: 1 / 1;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
@@ -14,6 +16,7 @@
   outline: none;
   transition: border-color 0.2s ease;
 }
+
 
 .character:focus {
   border-color: #646cff;
